--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^19.0.0",
     "recharts": "^2.15.0",
     "lucide-react": "^0.474.0",
-    "@google/genai": "^1.33.0"
+    "@google/genai": "^1.33.0",
+    "@neondatabase/serverless": "^0.10.4"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
